--- a/.github/workflows/checkin.yml
+++ b/.github/workflows/checkin.yml
@@ -15,20 +15,14 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: [3.7, 3.8, 3.9]
 
     steps:
     - uses: actions/checkout@v2
-    - name: Set up Python ${{ matrix.python-version }}
+    - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: ${{ matrix.python-version }}
+        python-version: 3.7
     - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        python -m pip install requests json
+      run: pip install requests json
     - name: Test with pytest
-      run: |
-        pytest.py
+      run: python pytest.py
