--- a/.github/workflows/checkin.yml
+++ b/.github/workflows/checkin.yml
@@ -7,7 +7,7 @@ on:
   push:
      branches: main
   schedule:
-    - cron: '*/1 * * * *'
+    - cron: '* */2 * * *'
 
 jobs:
   build:
@@ -23,4 +23,4 @@ jobs:
     - name: Install dependencies
       run: pip install -r ./requirements.txt
     - name: Test with pytest
-      run: python pytest.py
+      run: python checkin.py
